# SentimentAnalysis

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  kamuskatabaku.xlsx  preprocessing_logic.py  pyproject.toml  requirements.txt  visualization_logic.py
